# Auto-GPT-Refactor-Codebase

./: pyproject.toml  requirements.txt
src/auto_gpt_refactor_codebase/: __init__.py  refactor_codebase.py
test/: test_post_prompt_commands.py
test/fake_codebase/: fake_codebase.py
test/fake_codebase/utils/: file_utils.py
