[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto_gpt_refactor_codebase"
version = "0.0.2"
authors = [
  { name="bschreck", email="ben@benschreck.com" },
]
description = "Refactor your codebase"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["abstract-singleton"]

[project.urls]
"Homepage" = "https://github.com/bschreck/Auto-GPT-Refactor-Codebase"
"Bug Tracker" = "https://github.com/bschreck/Auto-GPT-Refactor-Codebase"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "120"